force-app/main/default/objects/ssot__LearnerProgramRqmtProgress__dlm/fields/ssot__LearnerProgramRequirementId__c.field-meta.xml
<CustomField>
    <fullName>ssot__LearnerProgramRequirementId__c</fullName>
    <label>Learner Program Requirement</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LearnerProgramRequirementId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>