force-app/main/default/objects/ssot__LearnerProgramRqmtProgress__dlm/fields/ssot__LearningOutcomeItemId__c.field-meta.xml
<CustomField>
    <fullName>ssot__LearningOutcomeItemId__c</fullName>
    <label>Learning Outcome Item</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LearningOutcomeItemId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>