force-app/main/default/objects/ssot__LearnerProgramRqmtProgress__dlm/fields/ssot__rel_1719819882757_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719819882757_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LearnerProgramRqmtProgress_LearningO_rel</label>
    <referenceTo>ssot__LearningOutcomeItem__dlm</referenceTo>
    <relationshipLabel>LearnerProgramRqmtProgress_LearningO_rel</relationshipLabel>
    <relationshipName>rel_1719819882757_end</relationshipName>
    <type>Lookup</type>
</CustomField>