force-app/main/default/objects/ssot__LearnerProgramRqmtProgress__dlm/fields/ssot__rel_1719820318561_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719820318561_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LearnerProgramRqmtProgress_LearnerPr_rel</label>
    <referenceTo>ssot__LearnerProgramRequirement__dlm</referenceTo>
    <relationshipLabel>LearnerProgramRqmtProgress_LearnerPr_rel</relationshipLabel>
    <relationshipName>rel_1719820318561_end</relationshipName>
    <type>Lookup</type>
</CustomField>